Fix the preview height on firefox
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoItems/trunk@16554 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/css/preview.css
+++ b/views/css/preview.css
@@ -24,7 +24,7 @@ iframe#preview-container{
 	border:none;
 }
 
-.fullScreen{
+.fullScreen, html{
     height:100%;
 }
 .fullScreen iframe#preview-container{
